# cora-recap-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
app/: __init__.py  compat.py  db.py  main.py
app/adapters/: __init__.py  ghl.py  openai_client.py  sheets.py  synthflow.py
app/api/: __init__.py  deps.py
app/config/: __init__.py  settings.py
app/core/: ai_message_generator.py  campaigns.py  conversation_context.py  intent_actions.py  intent_detection.py  lifecycle.py  message_templates.py  reply_detection.py
app/models/: __init__.py  audit.py  base.py  call_event.py  classification.py  exception.py  inbound_message.py  lead_state.py  outbound_message.py  scheduled_job.py  shadow_action.py  shadow_sheet.py  summary.py  task_event.py
app/prompts/: __init__.py  registry.py
app/schemas/: __init__.py  ai.py
app/services/: __init__.py  ai.py  dashboard.py  tier_policy.py
app/worker/: __init__.py  claim.py  exceptions.py  main.py  retry.py  scheduler.py  shadow.py
directives/adr/: 0001_architecture_choice.md  0002_data_storage.md  0003_authn_authz.md
directives/spec/: 00_overview.md  01_requirements.md  03_constraints.md  (+13 more)
docs/: audit_queries.sql  non_unit_test_scenarios.md
execution/: dashboard.py  expected_outcomes.md  monitor_queries.sql  scenario_runner.py  seed_scenarios.sql  simulate_webhook.py  simulate_webhooks.py
migrations/: env.py  script.py.mako
reports/: e2e_test_report.md  sim_test_report.md
tests/: __init__.py  conftest.py
(+75 files in other folders)
